# neural_chemistry

./: .gitignore  LICENSE  README.md  emulator.py  encoding.py  example.ipynb  example.py  example2.py  list_molecules.txt  list_molecules_20ene24.txt  parameters.in  pyproject.toml
modules/: mlp.py
nautilus/: abundances.in  activation_energies_refs.in  element.in  gas_reactions.in  gas_species.in  grain_reactions.in  grain_species.in  parameters.in  surface_parameters.in
src/neural_chemistry/: __init__.py  emulator.py  emulator_refinement.py  io.py  mlp.py  normalization.py
training/: train.py
