[project]
name = "neural-chemistry"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andres Asensio Ramos", email = "aasensio@iac.es" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
